@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.09-11.06
-Date: 2011-2-8
+Version: 0.09-12
+Date: 2011-2-9
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Yu-Sung Su <suyusung@tsinghua.edu.cn>,
@@ -12,6 +12,6 @@ Depends: methods, MASS, nnet, car, arm (>= 1.3-08), Matrix, lme4,
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2011-02-08 16:52:05 UTC; yusung
+Packaged: 2011-02-09 09:36:45 UTC; yusung
 Repository: CRAN
-Date/Publication: 2011-02-08 22:04:37
+Date/Publication: 2011-02-09 10:48:04
